# DuckRunnerAnalysis

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  main.py  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/utils/: __init__.py  loader.py  loader_class.py  unit_converter.py  zone_input.py
data/: T12_25_New_Balance_15km_.fit  T14_25_Subidas_.fit  T16_25_Corrida_rápida_longa_.fit
